--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <section class="hero hero-1">
+        <img href="images/beautiful-composition-with-christmas-ornaments-white-background.jpg">
+    </section>
    <nav class="nav-menu">
     <ul>
         <il><a href="#">Home</a></il>
-        <il><a href="#">About</a></il>
-        <il><a href="#">Services</a></il>
-        <il><a href="#">Contact</a></il>
+        
     </ul>
 </nav>
     <div class="cards-grid">
@@ -24,7 +25,7 @@
                        <a href="" class="btn btn-secondary">Learn More</a>
                     </div>
                 </div>
-                
+
     </div>
 </body>
 </html>
