--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <section class="hero hero-1">
-        <img href="images/beautiful-composition-with-christmas-ornaments-white-background.jpg">
-    </section>
    <nav class="nav-menu">
     <ul>
         <il><a href="#">Home</a></il>
         
     </ul>
 </nav>
+
+<div class="hero">
+
+</div>
+
     <div class="cards-grid">
          <div class="card">
                     <img src="" alt="">
                     <div class="card-content">
                        <h3></h3>
                        <p></p>
-                       <a href="" class="btn btn-secondary">Learn More</a>
+                       <a href="" class="btn btn-secondary"></a>
                     </div>
                 </div>
 
