--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </nav>
 
 <div class="hero">
-
+    <div class="hero-content">
+        <h1>Hero Section</h1>
+    </div>
 </div>
 
     <div class="cards-grid">
