--- a/item4.html
+++ b/item4.html
@@ -15,7 +15,7 @@
 </nav>
   <div class="item2">
     <div class="item2-img">
-        <img src="images/deconovo-gVKmonDbotU-unsplash (1).jpg" alt="Bike">
+        <img src="images/deconovo-gVKmonDbotU-unsplash (1).jpg" alt="Bed">
     </div>
     <div class="item-content">
         <h1>About this item</h1>
