--- a/item6.html
+++ b/item6.html
@@ -15,11 +15,16 @@
 </nav>
 <div class="item2">
     <div class="item2-img">
-        <img src="images/kelly-sikkema-LFGAatMUDvc-unsplash.jpg" alt="">
+        <img src="images/kelly-sikkema-LFGAatMUDvc-unsplash.jpg" alt="Pencils/Pens">
  </div>
     <div class="item-content">
         <h1>About this item</h1>
-        <p>These pens are so smooth they write so clean.</p>
+        <p>Fast-Drying Ink: Dries 3 times faster for reduced smearing, ensuring clean and neat writing.
+<br>Vivid Colors: Smooth, colorful ink keeps your ideas flowing across the page and brightens your writing.
+<br>qComfort Grip: Ergonomic comfort grip provides a comfortable writing experience.
+<br>Medium Point: 0.7mm medium point distributes ink beautifully for clear and precise writing.
+<br>Assorted Colors: Includes 22 pens with a variety of colors, featuring 7 additional colors for more creative options.
+<br>Smudge-Free Writing: Brilliant color ensures your writing will be bright and filled with fun, without smudges</p>
     </div>
 </body>
 </html>
