--- a/item5.html
+++ b/item5.html
@@ -15,11 +15,11 @@
 </nav>
     <div class="item2">
     <div class="item2-img">
-        <img src="images/jurij-kenda-OcMKDx5y11A-unsplash.jpg" alt="">
+        <img src="images/jurij-kenda-OcMKDx5y11A-unsplash.jpg" alt="Mcdonalds">
     </div>
     <div class="item-content">
         <h1>About this item</h1>
-        <p>Its so very delicous but is very very unnhealthy for you since it's very proccessed. </p>
+        <p>McDonald's Corporation, doing business as McDonald's, is an American multinational fast food restaurant chain. As of 2024, it is the second-largest by number of locations in the world, behind the Chinese chain Mixue Ice Cream & Tea. </p>
     </div>
 </div>
 </body>
